--- a/ui.apps/src/main/content/jcr_root/apps/myproject/components/testcomp/testcomp.html
+++ b/ui.apps/src/main/content/jcr_root/apps/myproject/components/testcomp/testcomp.html
@@ -1,5 +1,3 @@
 
 Hii Welcome to Test comp.<br/>
-<sly data-sly-use.template="thetaxinstitute/components/common/templates.html"
-    data-sly-use.model="com.myproject.aem.core.models.HelloWorldModel"></sly>
-${model.message}
+<sly data-sly-use.model="com.myproject.aem.core.models.ReadJsonModel"> 111 :: ${model.property} </sly>
